--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,3 +28,5 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
+      - name: Run the artifact
+        run:  ./run.cmd
