--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-      - name: Run the artifact
-        run:  ./run.cmd
+      - name: Copy jar file to another directory
+        run: sudo cp /home/ubuntu/actions-runner/_work/awsec2test/awsec2test/build/libs/deploy-0.0.1-SNAPSHOT.jar /home/ubuntu/artifact
+
+#      - name: Run the artifact
+#        run:  sudo kill -9 'sudo lsof -t -i:20500' & sudo java -jar
